Add the link to arxiv and bibtex entry to website

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark" disabled>
+                  <a target="_blank" href="https://arxiv.org/abs/2509.19301"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper (Coming Soon)</span>
+                    <span>Paper</span>
                   </a>
                 </span>
                 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -103,7 +104,7 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/e1OkcOgHY4M?autoplay=1&mute=1&loop=1" frameborder="0"
+          <iframe src="https://www.youtube.com/embed/JAwkOwufqs8?autoplay=1&mute=1&loop=1" frameborder="0"
             allow="autoplay; encrypted-media" allowfullscreen>
           </iframe>
         </div>
@@ -967,12 +968,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <!-- <pre><code>@misc{ankile2025residualoffpolicy,
+      <pre><code>@misc{ankile2025residualoffpolicyrlfinetuning,
         title={Residual Off-Policy RL for Finetuning Behavior Cloning Policies}, 
         author={Lars Ankile and Zhenyu Jiang and Rocky Duan and Guanya Shi and Pieter Abbeel and Anusha Nagabandi},
-        year={2026},
-        primaryClass={cs.RO}
-  } -->
+        year={2025},
+        eprint={2509.19301},
+        archivePrefix={arXiv},
+        primaryClass={cs.RO},
+        url={https://arxiv.org/abs/2509.19301}, 
+  }
       </code></pre>
     </div>
   </section>
