--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Residual Off-Policy RL for Finetuning Behavior Cloning Policies - ICRA 2026.">
+  <meta name="description" content="Residual Off-Policy RL for Finetuning Behavior Cloning Policies">
   <meta name="keywords" content="Reinforcement Learning, Robot Learning, BC and RL">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Residual Off-Policy RL for Finetuning Behavior Cloning Policies</title>
